--- a/index.css
+++ b/index.css
@@ -234,10 +234,10 @@ i[class*='van-type-'] {
     color: black;
     text-decoration: none;
 }
-
+/* 
 .van-detail-container .back-button:visited {
     
-}
+} */
 
 .van-detail-container .back-button span {
     text-decoration: underline;
@@ -277,4 +277,21 @@ i[class*='van-type-'] {
     background-color: #FF8C38;
     color: white;
     font-size: 1.125rem;
+}
+
+.host-nav {
+    display: flex;
+}
+
+.host-nav a {
+    text-decoration: none;
+    color: #4D4D4D;
+    font-weight: 500;
+    padding: 5px 20px;
+}
+
+.host-nav a:hover {
+    color: #161616;
+    text-decoration: underline;
+    font-weight: 600;
 }
