added /host/vans page

--- a/index.css
+++ b/index.css
@@ -19,6 +19,12 @@ body {
   scrollbar-width: none;
 }
 
+.site-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 header {
   height: 110px;
   display: flex;
@@ -44,6 +50,22 @@ header a {
 header a:hover {
   color: #161616;
   text-decoration: underline;
+}
+
+main {
+  margin-bottom: 84px;
+}
+
+footer {
+  background-color: #161616;
+  color: #aaaaaa;
+  height: 74px;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  font-weight: 500;
 }
 
 .link-button {
@@ -76,12 +98,6 @@ header a:hover {
   padding: 45px 23px;
 }
 
-.site-wrapper {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
 .home-container h1 {
   font-weight: 700;
   font-size: 2.25rem;
@@ -110,16 +126,6 @@ header a:hover {
 
 .home-container a:hover {
   transform: translate(1px, 1px);
-}
-footer {
-  background-color: #161616;
-  color: #aaaaaa;
-  height: 50px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  margin-top: auto;
 }
 
 /*** ABOUT PAGE ***/
@@ -253,10 +259,9 @@ i[class*="van-type-"] {
   color: black;
   text-decoration: none;
 }
-/* 
+
 .van-detail-container .back-button:visited {
-    
-} */
+}
 
 .van-detail-container .back-button span {
   text-decoration: underline;
@@ -315,30 +320,40 @@ i[class*="van-type-"] {
   font-weight: 600;
 }
 
-.active-header {
-  font-weight: bold;
-  text-decoration: underline;
-  color: #161616;
+.host-van-link-wrapper {
+  color: unset;
+  text-decoration: unset;
 }
 
-/* HOST - VANS */
+.host-vans-list {
+  padding-inline: 26px;
+}
 
-.host-vans {
+.host-vans-title {
+  padding-inline: 26px;
+}
+
+.host-van-single {
   display: flex;
-  flex-direction: column;
-  justify-content: start;
-  margin: 5em;
-}
-
-.van {
-  background-color: white;
-}
-
-/* NOT FOUND */
-
-.not-found {
-  display: flex;
-  flex-direction: column;
-  justify-items: center;
   align-items: center;
+  background-color: white;
+  margin-bottom: 15px;
+  padding-block: 18px;
+  padding-left: 24px;
+}
+
+.host-van-single > img {
+  height: 70px;
+  border-radius: 5px;
+  margin-right: 17px;
+}
+
+.host-van-info h3 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-block: 10px;
+}
+
+.host-van-info p {
+  margin-block: 10px;
 }
